fix: Adjust font size of interest section heading for better readability

--- a/my-portfolio/src/app/pages/About/About.css
+++ b/my-portfolio/src/app/pages/About/About.css
@@ -107,7 +107,7 @@
     }
     .interest-section {
       h2 {
-        font-size: 15rem;
+        font-size: 14rem;
         font-family: "BBH Sans Bogle", sans-serif;
       }
       .interest-list {
